--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 
 Hola mundo cruel
-(https://github.com/sese01/Pokemon/blob/main/webApplicationPokemon/src/assets/img/pokemonLogo.png)
+[![image.png](https://i.postimg.cc/YSpr6TwK/image.png)](https://postimg.cc/3kcQ7SRn)
